<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search for: " />

    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />

    </EditText>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radio_group">
        <RadioButton android:id="@+id/radio_search_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchByCourse" />
        <RadioButton android:id="@+id/radio_search_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchByGroup" />
        <RadioButton android:id="@+id/radio_search_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchByLastName"
       />
        <RadioButton android:id="@+id/radio_search_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchByFirstName"
            />
    </RadioGroup>

</LinearLayout>